WORDPRESS/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
